Remade layout, made as a table

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,27 @@ ul {
   margin-left: auto;
 }
 
+.d-table {
+  display: table;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.d-tr {
+  display: table-row;
+}
+
+.d-td,
+.d-th {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.d-th {
+  background-color: #ddd;
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -153,6 +174,7 @@ ul {
 }
 
 
+
 .main {
   position: relative;
 }
@@ -165,31 +187,17 @@ ul {
   background-color: #f4f2f2;
 }
 
-.content-list {
-  display: flex;
-  flex-flow: row nowrap;
-  list-style: none;
-}
+
+
+
 
 .content-list__item {
-  /* flex: 100%; */
-  flex-basis: 0;
--ms-flex-positive: 1;
-flex-grow: 5;
   border: 1px solid #bbb;
-}
-
-.content-list__item:first-child {
-  flex: 0 0 7%;
-}
-
-.content-list__item:last-child {
-  flex: 1 0 8%;
 }
 
 .content-list__link {
   display: block;
-  padding: .5rem 1rem;
+  padding: .2rem .4rem;
   color: #333;
   text-decoration: none;
 }
@@ -200,12 +208,7 @@ flex-grow: 5;
   background-color: #ccc;
 }
 
-.content-header .content-list__link {
-  background-color: #ddd;
-}
-
 .content-body img {
-  display: block;
   width: auto;
   height: 3rem;
 }
