Created logo, changed styles: header, btns

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ ul {
   padding: .5rem;
   max-width: 500px;
   border-radius: 5px;
-  background-color: #3122e2;
+  background-color: #4257B2;
 }
 
 .modal-bag .modal__dialog {
@@ -71,37 +71,45 @@ ul {
 }
 
 .btn {
-  padding: .5rem 1rem;
+  padding: .4rem .8em;
   font-weight: bold;
-  border: 2px solid;
+  font-size: .6rem;
   border-radius: 5px;
+  border: 2px solid #239191 ;
+  background-color: #34cdcd;
   cursor: pointer;
 }
 
-.btn__sign-in,
+.btn:hover,
+.btn:active {
+  border: 2px solid #1d7e7e;
+  background-color: #28A7A7;
+}
+
+/* .btn__sign-in,
 .btn__second {
   background-color: #3bf755;
   border-color: #26ba46;
-}
+} */
 
-.btn__sign-in:hover,
+/* .btn__sign-in:hover,
 .btn__sign-in:active,
 .btn__second:hover,
 .btn__second:active {
   background-color: #74fb78;
   border-color: #5fd162;
-}
-
+} */
+/*
 .btn__sign-up {
   background-color: #3bf7dc;
   border-color: #26baa5;
-}
+} */
 
-.btn__sign-up:hover,
+/* .btn__sign-up:hover,
 .btn__sign-up:active {
   background-color: #74fbe8;
   border-color: #5fd1c1;
-}
+} */
 
 .btn-close {
   position: absolute;
@@ -129,12 +137,26 @@ ul {
 }
 
 .header {
-  background-color: #3122e2;
+  padding: .5rem 0;
+  background-color: #4257B2;
+}
+
+.header-row {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo img {
+  display: block;
+  width: 2rem;
+  height: auto;
+  border-radius: 50%;
 }
 
 .login {
   position: relative;
-  padding: 1rem 0;
 }
 
 .login__nav {
@@ -183,12 +205,9 @@ ul {
   cursor: pointer;
 }
 
-.card-list__item:nth-child(even) {
+.card-list__item:nth-child(odd) {
   background-color: #f4f2f2;
 }
-
-
-
 
 
 .content-list__item {
