--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ ul {
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);  
+  overflow-y: auto;
 }
 
 .modal__dialog {
@@ -112,10 +112,19 @@ ul {
 }
 
 .header {
+  position: relative;
+  left: 0;
+  top: -.5rem;
   padding: .5rem 0;
   background-color: #4257B2;
   box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.5);
   z-index: 5;
+  transition: 0.3s;
+}
+
+.header:hover {
+  top: 0;
+  z-index: 1;
 }
 
 .header-row {
@@ -172,20 +181,6 @@ ul {
   padding: .2rem 0;
 }
 
-
-.main,
-.header {
-  position: relative;
-  left: 0;
-  top: -.5rem;
-  transition: 0.3s;
-}
-
-.header:hover,
-.header:hover ~ .main {
-  top: 0;
-  z-index: 1;
-}
 
 .card-list input[type="checkbox"] {
   cursor: pointer;
