--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ ul {
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);  
+  background-color: rgba(0, 0, 0, 0.5);
   overflow-y: auto;
 }
 
@@ -66,7 +66,8 @@ ul {
 }
 
 .modal-bag .modal__dialog {
-  max-width: 900px;
+  width: 90vw;
+  max-width: 1200px;
   background-color: #fff;
 }
 
