--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ ul {
 }
 
 .modal__dialog {
-  position: relative;
   margin: 2rem auto;
   padding: .5rem;
   max-width: 500px;
@@ -65,10 +64,25 @@ ul {
   background-color: #4257B2;
 }
 
+.modal__header {
+  position: relative;
+}
+
+.modal__title {
+  font-size: 1.7rem;
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+}
+
 .modal-bag .modal__dialog {
   width: 90vw;
   max-width: 1200px;
   background-color: #fff;
+}
+
+.modal-bag .modal__title {
+  color: #333;
 }
 
 .btn {
@@ -79,6 +93,10 @@ ul {
   border: 2px solid #239191 ;
   background-color: #34cdcd;
   cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .btn:hover,
@@ -89,16 +107,10 @@ ul {
 
 .btn-close {
   position: absolute;
-  top: -1rem;
-  right: -4rem;
+  top: 0;
+  right: 0;
   color: #fff;
   border-color: #fff;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.btn-close:hover,
-.btn-close:active {
-  opacity: 0.5;
 }
 
 .btn__clear {
